--- a/index.html
+++ b/index.html
@@ -17,20 +17,78 @@
         </button>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Resume</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Portfolio</a></li>
+                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#About" class="nav__link">About</a></li>
+                <li class="nav__item"><a href="#resume" class="nav__link">Resume</a></li>
+                <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
             </ul>
         </nav>
     </header>
+//intro
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
             Hi I am <strong>Alex Hernandez</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Student dev</p>
-        <img
+        <img src="img/Capture.PNG" alt="a picture of Alex Hernandez smiling">
+    </section>
+    //about
+    <section class="About" id="About">
+        <h2 class="section__title section__title--Aabout">Who am I?</h2>
+        <div class="About">
+            <div class="Aboutme">
+                <h3>title 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet mauris commodo quis. Lorem dolor sed viverra ipsum nunc. Condimentum lacinia quis vel eros donec ac odio. Massa sed elementum tempus egestas sed sed risus.</p>
+            </div>
+
+            <div class="Aboutme">
+                <h3>title 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet mauris commodo quis. Lorem dolor sed viverra ipsum nunc. Condimentum lacinia quis vel eros donec ac odio. Massa sed elementum tempus egestas sed sed risus.</p>
+            </div>
+
+            <div class="Aboutme">
+                <h3>title 3</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet mauris commodo quis. Lorem dolor sed viverra ipsum nunc. Condimentum lacinia quis vel eros donec ac odio. Massa sed elementum tempus egestas sed sed risus.</p>
+            </div>   
+        </div>
+        <a href="#resume" class="btn">My Resume</a>
+    </section>
+    //resume
+    <section class="resume" id="resume">
+        <h2 class="section_title resume__title--resume">My Work</h2>
+        <p class="section__subtitle section__subtitle--resume"></p>
+
+        <div class="resume__body">
+            <p></p>
+            <p></p>
+        </div>
+
+        <img src="img/filler.PNG">
+    </section>
+
+    //portfolio
+    <section class="work" id="work">
+        <h2 class="section__title">My Porfolio</h2>
+        <p class="section__subtitle"></p>
+
+        <div class="portfolio".>
+            <a href="#" class="portfolio__item">
+                <img src="img/filler.PNG" alt="" class="portfolio__img">
+            </a>
+
+            <a href="#" class="portfolio__item">
+                <img src="img/filler.PNG" alt="" class="portfolio__img">
+            </a>
+
+            <a href="#" class="portfolio__item">
+                <img src="img/filler.PNG" alt="" class="portfolio__img">
+            </a>
+
+            <a href="#" class="portfolio__item">
+                <img src="img/filler.PNG" alt="" class="portfolio__img">
+            </a>
+        </div>
     </section>
 </body>
 </html>
