--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <li><a href="resume.html">Resume</a></li>
     <li><a href="portfolio.html">Portfolio</a>
       <div class="dropdown">
-        <button class="dropbtn">Portfolio options</button>
+        <button class="dropbtn">Portfolio Options</button>
         <div class="dropdown-content">
           <a href="#WebProgramming.html">Web/Programming</a>
-          <a href="#writing.html">writing</a>
-          <a href="#other">other</a>
+          <a href="#writing.html">Writing</a>
+          <a href="#other">Other</a>
         </div>
       </div>
     </li>
@@ -38,7 +38,15 @@
   <div id="top"></div>
 
   <section id="hero" class="jumbotron">
-    
+    <div class="container">
+      <h1 class="hero-title load-hidden">
+        Hi, my name is <span class="text-color-main">Alex Hernanadez</span>
+        <br />
+      </h1>
+      <p class="hero-cta load-hidden">
+        <a rel="noreferrer" class="cta-btn cta-btn--hero" href="about.html">Know more</a>
+      </p>
+    </div>
   </section>
   <footer class="footer navbar-static-bottom">
     <div class="container">
