--- a/about.html
+++ b/about.html
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="sr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio - About Me</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+
+    <title>Alex Hernandez | Developer - About</title>
+    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="description" content="Alex Hernandez | Developer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
+
 <body>
-    
+    <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="portfolio.html">Portfolio</a>
+            <div class="dropdown">
+                <button class="dropbtn">Portfolio options</button>
+                <div class="dropdown-content">
+                    <a href="#WebProgramming.html">Web/Programming</a>
+                    <a href="#writing.html">writing</a>
+                    <a href="#other">other</a>
+                </div>
+            </div>
+        </li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <div id="top"></div>
+
+    <section id="about">
+        <div class="container">
+            <h2 class="section-title load-hidden">About me</h2>
+            <div class="row about-wrapper">
+                <div class="col-md-6 col-sm-12">
+                    <div class="about-wrapper__image load-hidden">
+                        <img alt="Profile Image" class="img-fluid rounded shadow-lg" height="auto" width="300px"
+                            src="assets/profile.jpg" alt="Profile Image" />
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="about-wrapper__info load-hidden">
+                        <p class="about-wrapper__info-text">
+                            This is where you can describe about yourself. The more you
+                            describe about yourself, the more chances you can!
+                        </p>
+                        <p class="about-wrapper__info-text">
+                            Extra Information about you! like hobbies and your goals.
+                        </p>
+                        <span class="d-flex mt-3">
+                            <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume"
+                                href="assets/resume.pdf">
+                                View Resume
+                            </a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer navbar-static-bottom">
+        <div class="container">
+            <a rel="noreferrer" href="#top" class="back-to-top">
+                <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
+            </a>
+            <div class="social-links">
+                <a rel="noreferrer" href="#!" target="_blank">
+                    <i class="fa fa-twitter fa-inverse"></i>
+                </a>
+                <a rel="noreferrer" href="#!" target="_blank">
+                    <i class="fa fa-linkedin fa-inverse"></i>
+                </a>
+                <a rel="noreferrer" href="#!" target="_blank">
+                    <i class="fa fa-github fa-inverse"></i>
+                </a>
+            </div>
+
+            <hr />
+
+            <p class="mt-3 pt-3">
+                <a rel="noreferrer" class="github-button" href="https://github.com/AlexHernandez001/personal-portfolio"
+                    data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
+                    aria-label="Fork ntkme/github-buttons on GitHub">Repository</a>
+                <a rel="noreferrer" class="github-button" href="https://github.com/AlexHernandez001"
+                    data-icon="octicon-star" data-size="large" data-show-count="true"
+                    aria-label="Star cobidev/simplefolio on GitHub">My Profile</a>
+            </p>
+        </div>
+    </footer>
+    <script defer type="module" src="index.js"></script>
+
 </body>
+
 </html>
