--- a/other.html
+++ b/other.html
@@ -20,16 +20,16 @@
 
 <body>
     <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="portfolio.html">Portfolio</a>
             <div class="dropdown">
-                <button class="dropbtn">Portfolio options</button>
+                <button class="dropbtn">Portfolio Options</button>
                 <div class="dropdown-content">
                     <a href="#WebProgramming.html">Web/Programming</a>
-                    <a href="#writing.html">writing</a>
-                    <a href="#other">other</a>
+                    <a href="#writing.html">Writing</a>
+                    <a href="#other">Other</a>
                 </div>
             </div>
         </li>
