--- a/resume.html
+++ b/resume.html
@@ -1,133 +1,143 @@
 <!DOCTYPE html>
 <html lang="en" class="sr">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <title>Alex Hernandez | Developer</title>
-    <meta name="keywords" content="[username], [name], skill" />
-    <meta name="description" content="Alex Hernandez | Developer" />
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="styles.scss" />
-    <script
-      defer
-      src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
-    ></script>
+  <title>Alex Hernandez | Developer</title>
+  <meta name="keywords" content="[username], [name], skill" />
+  <meta name="description" content="Alex Hernandez | Developer" />
 
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-  </head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="styles.scss" />
+  <script defer src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
-  <body>
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
+</head>
+
+<body>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="resume.html">Resume</a></li>
+    <li><a href="portfolio.html">Portfolio</a>
+      <div class="dropdown">
+        <button class="dropbtn">Portfolio Options</button>
+        <div class="dropdown-content">
+          <a href="#WebProgramming.html">Web/Programming</a>
+          <a href="#writing.html">Writing</a>
+          <a href="#other">Other</a>
+        </div>
+      </div>
+    </li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+  <div id="top"></div>
+
+  <section id="hero" class="jumbotron">
+    <h2>Objective</h2>
+    <p>Web Application Developer</p>
+    <h2>Education</h2>
+    <h3>Center for Advanced Research and Technology(CART)</h3>
+    <p>
     <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li>Experience with HTML5, CSS3, and JavaScript</li>
+      <li>Prototyping with Figma</li>
+      <li>Creating websites</li>
+      <li>Created a traveling website based on Canada</li>
+      <li>Created a a traveling website based on a ficticious time traveling business</li>
     </ul>
-    <div id="top"></div>
-
-    <section id="hero" class="jumbotron">
-      <h2>Objective</h2>
-      <p>Web Application Developer</p>
-      <h2>Education</h2>
-      <h3>Center for Advanced Research and Technology(CART)</h3>
-      <p>
-      <ul>
-        <li>Experience with HTML5, CSS3, and JavaScript</li>
-        <li>Prototyping with Figma</li>
-        <li>Creating websites</li>
-        <li>Created a traveling website based on Canada</li>
-        <li>Created a a traveling website based on a ficticious time traveling business</li>
-      </ul>
     </p>
     <h3>Clovis High School</h3>
-      <p>
-        <ul>
-          <li>College Preparatory classes</li>
-          <li>GPA of 3.3</li>
-        </ul>
+    <p>
+    <ul>
+      <li>College Preparatory classes</li>
+      <li>GPA of 3.3</li>
+    </ul>
+    </p>
+    <h2>Computer Software</h2>
+    <p>
+    <ul>
+      <li>Adobe Spark Pages</li>
+      <li>Google Docs aand Slides</li>
+      <li>Google Classroom</li>
+    </ul>
+    </p>
+    <h2>Extracurricular Activities</h2>
+    <p>
+    <ul>
+      <li>Esport's Club</li>
+      <li>CART esports club</li>
+    </ul>
+    </p>
+    <h2>Skills</h2>
+    <p>
+    <ul>
+      <li>good at managing money</li>
+      <li>good in team environments</li>
+      <li>collaborating with teammates</li>
+      <li>formally presenting projects</li>
+    </ul>
+    </p>
+    <h2>Work Experience</h2>
+    <p>
+    <ul>
+      <li>Mowing lawns</li>
+      <li>cleaning around the house</li>
+      <li>taking care of cats on a daily basis</li>
+    </ul>
+    </p>
+    <p></p>
+    <ul>
+      <li>2555 Clovis Ave.</li>
+      <li>Clovis, CA  93612</li>
+      <li>alex.hernandez@student.cart.org</li>
+      <li>January 25, 2022</li>
+    </ul>
+    <p></p>
+    <h2>Letter of Recommendation</h2>
+      <p>Adam Temple, Founder/CEO</p>
+      <p>Bixley, Inc</p>
+      <p>2727 N. Grove Industrial Dr.</p>
+      <p>Suite 105</p>
+      <p>Fresno, CA 93727</p>
+    <p>Dear Mr. Temple:</p>
+    <p>I would like to apply for a Web Application Development internship. I have taken a class on Web Application Development at a school for Advanced Research and Technology.</p>
+    <p>I have a thorough understanding of HTML5, CSS3, and JavaScript. I have received professional teaching from someone certificated in these languages. I have created multiple mock websites in this class in preparation for making a real one. I have an understanding of my own knowledge and plan to listen to and learn from this experience. I am consistently attendant to my classes, have leadership qualities, and worked as a team at both CART and in gaming. Some other qualities I have is that I’m good at communicating, enjoy computer and gaming, and have the ability to meet deadlines.</p>
+    <p>I’m hoping that this position will be beneficial for both of us and that I can help your company while learning even more. I would be pleased to have an interview and further discuss this position. I have provided my phone number and email address and can be contacted there. Thank you for considering me for this position.</p>
+    <p>Sincerely,</p>
+    <p>Alex Hernandez</p>
+  </section>
+  <footer class="footer navbar-static-bottom">
+    <div class="container">
+      <a rel="noreferrer" href="#top" class="back-to-top">
+        <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
+      </a>
+      <div class="social-links">
+        <a rel="noreferrer" href="#!" target="_blank">
+          <i class="fa fa-twitter fa-inverse"></i>
+        </a>
+        <a rel="noreferrer" href="#!" target="_blank">
+          <i class="fa fa-linkedin fa-inverse"></i>
+        </a>
+        <a rel="noreferrer" href="#!" target="_blank">
+          <i class="fa fa-github fa-inverse"></i>
+        </a>
+      </div>
+
+      <hr />
+      <p class="mt-3 pt-3">
+        <a rel="noreferrer" class="github-button" href="https://github.com/AlexHernandez001/personal-portfolio"
+          data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
+          aria-label="repository">repository</a>
+        <a rel="noreferrer" class="github-button" href="https://github.com/AlexHernandez001o" data-icon="octicon-star"
+          data-size="large" data-show-count="true" aria-label="Profile on Github">Github Profile</a>
       </p>
-      <h2>Computer Software</h2>
-      <p>
-        <ul>
-          <li>Adobe Spark Pages</li>
-          <li>Google Docs aand Slides</li>
-          <li>Google Classroom</li>
-        </ul>
-      </p>
-      <h2>Extracurricular Activities</h2>
-      <p>
-        <ul>
-          <li>Esport's Club</li>
-          <li>CART esports club</li>
-        </ul>
-      </p>
-      <h2>Skills</h2>
-      <p>
-        <ul>
-          <li>good at managing money</li>
-          <li>good in team environments</li>
-          <li>collaborating with teammates</li>
-          <li>formally presenting projects</li>
-        </ul>
-      </p>
-      <h2>Work Experience</h2>
-      <p>
-        <ul>
-          <li>Mowing lawns</li>
-          <li>cleaning around the house</li>
-          <li>taking care of cats on a daily basis</li>
-        </ul>
-      </p>
-    </section>
-    <footer class="footer navbar-static-bottom">
-        <div class="container">
-          <a rel="noreferrer" href="#top" class="back-to-top">
-            <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
-          </a>
-          <div class="social-links">
-            <a rel="noreferrer" href="#!" target="_blank">
-              <i class="fa fa-twitter fa-inverse"></i>
-            </a>
-            <a rel="noreferrer" href="#!" target="_blank">
-              <i class="fa fa-linkedin fa-inverse"></i>
-            </a>
-            <a rel="noreferrer" href="#!" target="_blank">
-              <i class="fa fa-github fa-inverse"></i>
-            </a>
-          </div>
-  
-          <hr />
-          <p class="mt-3 pt-3">
-            <a
-              rel="noreferrer"
-              class="github-button"
-              href="https://github.com/AlexHernandez001/personal-portfolio"
-              data-icon="octicon-repo-forked"
-              data-size="large"
-              data-show-count="true"
-              aria-label="repository"
-              >repository</a
-            >
-            <a
-              rel="noreferrer"
-              class="github-button"
-              href="https://github.com/AlexHernandez001o"
-              data-icon="octicon-star"
-              data-size="large"
-              data-show-count="true"
-              aria-label="Profile on Github"
-              >Github Profile</a
-            >
-          </p>
-        </div>
-      </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
