--- a/about.html
+++ b/about.html
@@ -56,9 +56,9 @@
               languages HTML5, CSS3, and JavaScript. Next year I will be taking Interactive Game Design.
             </p>
             <p class="about-wrapper__info-text">
-              My favorite pastimes are playing video games and watching anime. I currently have 6 cats that I love
-              dearly.
+              My favorite pastimes are playing video games and watching anime. I currently have 6 cats that I love dearly.
             </p>
+            <p class="about-wrapper__info-text">I have many Post-Secondary Plan goals. My goal for the summer after highschool is to secure enrollment in Clovis Community and Enjoy my first summer as an adult. My goal for the fall after highschool is to get good grades at Clovis Community. The course I will be taking is the general course requirements for a degree that I haven't decided on yet. I will pay for college is that I will use money my mom saved up and student loans if they are needed. The two goals I would like to achieve after my first year after high school is to have at least a 3.0 GPA and to stay in contact with my friends.</p>
             <span class="d-flex mt-3">
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="resume.html">
                 View Resume
