--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         Hi, my name is <span class="text-color-main">Alex Hernanadez</span>
         <br />
       </h1>
+      <p>Hello, my name is Alex Hernandez, I am currently a student at CART and Clovis High School. This portfolio will tell you more about me and my projects.</p>
+      <p>Thank you for visiting my Portfolio!</p>
       <p class="hero-cta load-hidden">
         <a rel="noreferrer" class="cta-btn cta-btn--hero" href="about.html">Know more</a>
       </p>
