--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Alex Hernandez | Developer" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="styles.scss" />
+  <link rel="stylesheet" href="style.css" />
   <script defer src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
   <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -43,7 +43,7 @@
       <div class="row about-wrapper">
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__image load-hidden">
-            <img class="img-fluid rounded shadow-lg" height="auto" width="300px" src="assets/profile.jpg"
+            <img class="img-fluid rounded shadow-lg" height="auto" width="300px" src="img/filler.PNG"
               alt="Profile Image" />
           </div>
         </div>
