--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <li><a href="resume.html">Resume</a></li>
         <li><a href="portfolio.html">Portfolio</a>
             <div class="dropdown">
-                <button class="dropbtn">Portfolio options</button>
+                <button class="dropbtn">Portfolio Options</button>
                 <div class="dropdown-content">
                     <a href="#WebProgramming.html">Web/Programming</a>
                     <a href="#writing.html">writing</a>
@@ -40,7 +40,7 @@
     <section id="projects">
         <div class="container">
             <div class="project-wrapper">
-                <h2 class="section-title dark-blue-text">Projects</h2>
+                <h2 class="section-title dark-blue-text">Contact</h2>
 
                 <div class="row">
                     <div class="col-lg-4 col-sm-12">
@@ -68,7 +68,7 @@
                             <a rel="noreferrer" href="#!" target="_blank">
                                 <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5"
                                     class="thumbnail rounded js-tilt">
-                                    <img alt="Project Image" class="img-fluid" src="assets/project.jpg" />
+                                    <img alt="Project Image" class="img-fluid" src="img/filler.PNG" />
                                 </div>
                             </a>
                         </div>
@@ -76,6 +76,35 @@
                 </div>
             </div>
         </div>
+        <form onsubmit="return false">
+            <input type="text" placeholder="Enter your last name" id="lastName" />
+            <br><br>
+            <input type="radio" id="male" name="gender" value="male"> Male
+            <input type="radio" id="female" name="gender" value="female"> Female
+            <br><br>
+            <input type="email" placeholder="Enter your email" id="email" />
+            <br><br>
+            <input type="text" placeholder="Address" id="address" />
+            <input type="text" placeholder="House number" id="houseNumber" />
+            <select id="country">
+                <option disabled selected value> -- select a country -- </option>
+                <option value="Narnia">Narnia</option>
+                <option value="Neverland">Neverland</option>
+                <option value="Vulcan">Vulcan</option>
+            </select>
+            <br><br>
+            <option disabled selected value> -- select a country -- </option>
+            <input type="password" placeholder="Enter password" id="password" />
+            <input type="password" placeholder="Enter password (check)" id="passwordCheck" />
+            <br><br>
+            <input type="checkbox" id="newsletter" />Send me monthly newsletter
+            <br><br>
+            <span>What is your question?</span>
+            <br>
+            <textarea id="question" rows="4"></textarea>
+            <br><br>
+            <button onclick="sendContact();">Send contact</button>
+        </form>
     </section>
     <footer class="footer navbar-static-bottom">
         <div class="container">
