--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         Hi, my name is <span class="text-color-main">Alex Hernanadez</span>
         <br />
       </h1>
+      <p>I have organized the info on my portfolio, for your own convinince, into about, my resume, my projects, and how to contact me.</p>
       <p class="hero-cta load-hidden">
         <a rel="noreferrer" class="cta-btn cta-btn--hero" href="about.html">Know more</a>
       </p>
