--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div class="dropdown">
         <button class="dropbtn">Portfolio Options</button>
         <div class="dropdown-content">
-          <a href="#WebProgramming.html">Web/Programming</a>
-          <a href="#writing.html">Writing</a>
-          <a href="#other">Other</a>
+          <a href="game.html">Interactive Story</a>
+          <a href="writing.html">Writing</a>
+          <a href="other">Other</a>
         </div>
       </div>
     </li>
@@ -43,7 +43,7 @@
         Hi, my name is <span class="text-color-main">Alex Hernanadez</span>
         <br />
       </h1>
-      <p>Hello, my name is Alex Hernandez, I am currently a student at CART and Clovis High School. This portfolio will tell you more about me, my projects, my resume, and how to contact me.</p>
+      <p>Hello, my name is Alex Hernandez, I am currently a student at CART and Clovis High School. This portfolio will tell you more about me, my projects, my resume, and how to contact me. The about me has general info on me. The projects I present here are assignments from my Web Development class at CART. The resume I present here is what I made in class as part of a mock interview. Contact is done through email.</p>
       <p>Thank you for visiting my Portfolio!</p>
       <p class="hero-cta load-hidden">
         <a rel="noreferrer" class="cta-btn cta-btn--hero" href="about.html">Know more</a>
