--- a/portfolio.html
+++ b/portfolio.html
@@ -27,9 +27,9 @@
       <div class="dropdown">
         <button class="dropbtn">Portfolio Options</button>
         <div class="dropdown-content">
-          <a href="#WebProgramming.html">Web/Programming</a>
-          <a href="#writing.html">Writing</a>
-          <a href="#other">Other</a>
+          <a href="game.html">Interactive Story</a>
+          <a href="writing.html">Writing</a>
+          <a href="other">Other</a>
         </div>
       </div>
     </li>
@@ -38,7 +38,7 @@
   <div id="top"></div>
 
   <section id="hero" class="jumbotron">
-
+    <p></p>
   </section>
   <footer class="footer navbar-static-bottom">
     <div class="container">
