--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
             <div class="dropdown">
                 <button class="dropbtn">Portfolio Options</button>
                 <div class="dropdown-content">
-                    <a href="game.html">Interactive Story</a>
+                    <a href="program.html">Web/Programming</a>
                     <a href="writing.html">writing</a>
-                    <a href="other">other</a>
+                    <a href="drawing.html">Drawing</a>
                 </div>
             </div>
         </li>
