--- a/writing.html
+++ b/writing.html
@@ -27,9 +27,9 @@
             <div class="dropdown">
                 <button class="dropbtn">Portfolio options</button>
                 <div class="dropdown-content">
-                    <a href="game.html">Interactive Story</a>
+                    <a href="program.html">Web/Programming</a>
                     <a href="writing.html">writing</a>
-                    <a href="other">other</a>
+                    <a href="drawing.html">Drawing</a>
                 </div>
             </div>
         </li>
@@ -40,27 +40,20 @@
     <section id="projects">
         <div class="container">
             <div class="project-wrapper">
-                <h2 class="section-title dark-blue-text">Projects</h2>
+                <h2 class="section-title dark-blue-text">Writing</h2>
 
                 <div class="row">
                     <div class="col-lg-4 col-sm-12">
                         <div class="project-wrapper__text load-hidden">
-                            <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                            <h3 class="project-wrapper__text-title">Google Docs</h3>
                             <div>
                                 <p class="mb-4">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                                    aperiam earum dolor voluptatum consequatur blanditiis
-                                    inventore debitis fuga numquam voluptate ex architecto
-                                    itaque molestiae.
+                                    When I write text for my websites I write them first in Google Docs. My goal when
+                                    using this is to make a draft of the text and then edit it till I'm satisfied with
+                                    it. I then insert it into the website.
+                                    The concepts I used in google docs was 
                                 </p>
                             </div>
-                            <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                                See Live
-                            </a>
-                            <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="#!">
-                                Source Code
-                            </a>
                         </div>
                     </div>
                     <div class="col-lg-8 col-sm-12">
@@ -68,7 +61,7 @@
                             <a rel="noreferrer" href="#!" target="_blank">
                                 <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5"
                                     class="thumbnail rounded js-tilt">
-                                    <img alt="Project Image" class="img-fluid" src="assets/project.jpg" />
+                                    <img alt="Project Image" class="img-fluid" src="img/filler.PNG" />
                                 </div>
                             </a>
                         </div>
