--- a/portfolio.html
+++ b/portfolio.html
@@ -27,9 +27,9 @@
       <div class="dropdown">
         <button class="dropbtn">Portfolio Options</button>
         <div class="dropdown-content">
-          <a href="game.html">Interactive Story</a>
+          <a href="program.html">Web/Programming</a>
           <a href="writing.html">Writing</a>
-          <a href="other">Other</a>
+          <a href="drawing.html">Drawing</a>
         </div>
       </div>
     </li>
