--- a/writing.html
+++ b/writing.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <ul>
+    <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
@@ -51,7 +51,12 @@
                                     When I write text for my websites I write them first in Google Docs. My goal when
                                     using this is to make a draft of the text and then edit it till I'm satisfied with
                                     it. I then insert it into the website.
-                                    The concepts I used in google docs was 
+                                    Google Docs is a free text document creator and editor provided by google. Google
+                                    docs allows for me to change to document in ways such as font, color, and size. It
+                                    has a very high level of convienience. One of the most convienient things is that it
+                                    automatically saves any progress that happens to it, so you don't have to worry
+                                    about losing your progress. Another thing is that it saves to the cloud and can
+                                    therefore be accessed anywhere at any time.
                                 </p>
                             </div>
                         </div>
