--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <ul>
+    <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
@@ -45,38 +45,25 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-12">
                         <div class="project-wrapper__text load-hidden">
-                            <h3 class="project-wrapper__text-title">Project Title 0</h3>
                             <div>
                                 <p class="mb-4">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                                    aperiam earum dolor voluptatum consequatur blanditiis
-                                    inventore debitis fuga numquam voluptate ex architecto
-                                    itaque molestiae.
+                                    This is where you can contact me.
                                 </p>
                             </div>
-                            <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                                See Live
-                            </a>
-                            <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="#!">
-                                Source Code
-                            </a>
                         </div>
                     </div>
                     <div class="col-lg-8 col-sm-12">
                         <div class="project-wrapper__image load-hidden">
-                            <a rel="noreferrer" href="#!" target="_blank">
                                 <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5"
                                     class="thumbnail rounded js-tilt">
                                     <img alt="Project Image" class="img-fluid" src="img/filler.PNG" />
                                 </div>
-                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <form onsubmit="return false">
+        <form class="contactform" onsubmit="return false">
             <input type="text" placeholder="Enter your last name" id="lastName" />
             <br><br>
             <input type="radio" id="male" name="gender" value="male"> Male
