--- a/program.html
+++ b/program.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <ul>
+    <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
