--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
   <div id="top"></div>
 
   <section id="hero" class="jumbotron">
-    <p></p>
+    <p>The portfolio will show some of the sites and apps I used to </p>
   </section>
   <footer class="footer navbar-static-bottom">
     <div class="container">
