--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       <div class="dropdown">
         <button class="dropbtn">Portfolio Options</button>
         <div class="dropdown-content">
-          <a href="program.html">Web/Programming</a>
+          <a href="program.html">Programming</a>
           <a href="writing.html">Writing</a>
           <a href="drawing.html">Drawing</a>
         </div>
@@ -43,7 +43,7 @@
       <div class="row about-wrapper">
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__image load-hidden">
-            <img class="img-fluid rounded shadow-lg" height="auto" width="300px" src="img/filler.PNG"
+            <img class="img-fluid rounded shadow-lg" height="auto" width="300px" src="img/giphy.gif"
               alt="Profile Image" />
           </div>
         </div>
