--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <div class="dropdown">
                 <button class="dropbtn">Portfolio Options</button>
                 <div class="dropdown-content">
-                    <a href="program.html">Web/Programming</a>
+                    <a href="program.html">Programming</a>
                     <a href="writing.html">writing</a>
                     <a href="drawing.html">Drawing</a>
                 </div>
@@ -56,7 +56,7 @@
                         <div class="project-wrapper__image load-hidden">
                                 <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5"
                                     class="thumbnail rounded js-tilt">
-                                    <img alt="Project Image" class="img-fluid" src="img/filler.PNG" />
+                                    <img alt="Project Image" class="img-fluid" src="img/images.jpg" />
                                 </div>
                         </div>
                     </div>
