--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
       <div class="dropdown">
         <button class="dropbtn">Portfolio Options</button>
         <div class="dropdown-content">
-          <a href="program.html">Web/Programming</a>
+          <a href="program.html">Programming</a>
           <a href="writing.html">Writing</a>
           <a href="drawing.html">Drawing</a>
         </div>
@@ -38,7 +38,16 @@
   <div id="top"></div>
 
   <section id="hero" class="jumbotron">
-    <p>The portfolio will show some of the sites and apps I used to </p>
+    <div class="container">
+      <h1 class="hero-title load-hidden">
+        Hi, my name is <span class="text-color-main">Alex Hernandez</span>
+        <br />
+      </h1>
+      <p>The portfolio will show some of the sites and apps I used to make my websites. I have organized these into to ones I used to draw, the ones I used to write, and the ones I used to program. Porfolio options leads to these three pages.</p>
+      <p class="hero-cta load-hidden">
+        <a rel="noreferrer" class="cta-btn cta-btn--hero" href="about.html">Know more</a>
+      </p>
+    </div>
   </section>
   <footer class="footer navbar-static-bottom">
     <div class="container">
