--- a/writing.html
+++ b/writing.html
@@ -27,7 +27,7 @@
             <div class="dropdown">
                 <button class="dropbtn">Portfolio options</button>
                 <div class="dropdown-content">
-                    <a href="program.html">Web/Programming</a>
+                    <a href="program.html">Programming</a>
                     <a href="writing.html">writing</a>
                     <a href="drawing.html">Drawing</a>
                 </div>
@@ -63,10 +63,11 @@
                     </div>
                     <div class="col-lg-8 col-sm-12">
                         <div class="project-wrapper__image load-hidden">
-                            <a rel="noreferrer" href="#!" target="_blank">
+                            <a rel="noreferrer" target="_blank">
                                 <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5"
                                     class="thumbnail rounded js-tilt">
-                                    <img alt="Project Image" class="img-fluid" src="img/filler.PNG" />
+                                    <p>example:</p>
+                                    <img alt="Project Image" class="img-fluid" src="img/lg5.jpg" />
                                 </div>
                             </a>
                         </div>
