--- a/drawing.html
+++ b/drawing.html
@@ -27,7 +27,7 @@
             <div class="dropdown">
                 <button class="dropbtn">Portfolio Options</button>
                 <div class="dropdown-content">
-                    <a href="program.html">Web/Programming</a>
+                    <a href="program.html">Programming</a>
                     <a href="writing.html">Writing</a>
                     <a href="drawing.html">Drawing</a>
                 </div>
@@ -69,10 +69,11 @@
                     </div>
                     <div class="col-lg-8 col-sm-12">
                         <div class="project-wrapper__image load-hidden">
-                            <a rel="noreferrer" href="#!" target="_blank">
+                            <a rel="noreferrer" target="_blank">
                                 <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5"
                                     class="thumbnail rounded js-tilt">
-                                    <img alt="Project Image" class="img-fluid" src="img/filler.PNG" />
+                                    <p>example:</p>
+                                    <img alt="Project Image" class="img-fluid" src="img/figma-prototype2-1675x1116.jpg" />
                                 </div>
                             </a>
                         </div>
@@ -106,10 +107,10 @@
                             </div>
                             <div class="col-lg-8 col-sm-12">
                                 <div class="project-wrapper__image load-hidden">
-                                    <a rel="noreferrer" href="#!" target="_blank">
+                                    <a rel="noreferrer" target="_blank">
                                         <div data-tilt data-tilt-max="4" data-tilt-glare="true"
                                             data-tilt-max-glare="0.5" class="thumbnail rounded js-tilt">
-                                            <img alt="Project Image" class="img-fluid" src="img/filler.PNG" />
+                                            <img alt="Project Image" class="img-fluid" src="img/fb_cover-1.webp" />
                                         </div>
                                     </a>
                                 </div>
