--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
       <div class="dropdown">
         <button class="dropbtn">Portfolio Options</button>
         <div class="dropdown-content">
-          <a href="program.html">Web/Programming</a>
+          <a href="program.html">Programming</a>
           <a href="writing.html">Writing</a>
           <a href="drawing.html">Drawing</a>
         </div>
