--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section id="hero" class="jumbotron">
     <div class="container">
       <h1 class="hero-title load-hidden">
-        Hi, my name is<span class="text-color-main"> Alex Hernanadez</span>
+        Hi, my name is Alex Hernanadez</span>
         <br />
       </h1>
       <p>Hello, my name is Alex Hernandez, I am currently a student at CART and Clovis High School. This portfolio will tell you more about me, my projects, my resume, and how to contact me. The about me has general info on me. The projects I present here are assignments from my Web Development class at CART. The resume I present here is what I made in class as part of a mock interview. Contact is done through email.</p>
