--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
   <section id="hero" class="jumbotron">
     <div class="container">
       <h1 class="hero-title load-hidden">
-        Hi, my name is <span class="text-color-main">Alex Hernandez</span>
+        Hi, my name is Alex Hernandez</span>
         <br />
       </h1>
       <p>The portfolio will show some of the sites and apps I used to make my websites. I have organized these into to ones I used to draw, the ones I used to write, and the ones I used to program. Porfolio options leads to these three pages.</p>
